# ai-quant

./: .gitignore  CLAUDE.md  DEVELOPMENT_PROGRESS.md  FRONTEND_TEST_REPORT.md  REQUIREMENTS_STATUS.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/adapters/: __init__.py  akshare_adapter.py  base.py
backend/app/api/v1/: backtest.py  dashboard.py  data.py  optimize.py  strategy.py
backend/app/core/engine/: __init__.py  backtest.py  base.py
backend/app/core/indicators/: __init__.py  trend.py
backend/app/models/: __init__.py  domain.py  schemas.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_data.py  test_api_main.py
backend/tests/unit/: test_adapters.py  test_domain.py  test_engine.py  test_indicators.py
docs/superpowers/plans/: 2026-03-23-backend-implementation-COMPLETED.md  2026-03-23-backend-implementation.md  2026-03-23-frontend-implementation.md  2026-03-24-layout-and-dashboard.md
docs/superpowers/specs/: 2026-03-21-quant-platform-design.md  2026-03-23-backend-implementation-plan.md  2026-03-23-frontend-implementation-plan.md  2026-03-23-frontend-ui-design.md
frontend/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  element-plus.d.ts  main.ts
frontend/src/api/: backtest.ts  client.ts  dashboard.ts  strategy.ts
frontend/src/composables/: usePolling.ts  useWebSocket.ts
frontend/src/mocks/: handlers.ts
frontend/src/router/: index.ts
frontend/src/stores/: backtest.ts  strategy.ts
frontend/tests/: setup.ts
(+33 files in other folders)
